Fix column gaps

--- a/web/themes/ludvigs/assets/styles/sass/components/_admin.scss
+++ b/web/themes/ludvigs/assets/styles/sass/components/_admin.scss
@@ -32,12 +32,12 @@
 // Messages section
 
 mark {
-    padding: 3rem 1rem;
+    margin: 3rem 1rem;
 }
 
 @media only screen and (min-width: 767px) {
     mark {
-        padding: 5rem 2rem;
+        margin: 5rem 2rem;
     }
 }
 
